DFPL-43: Create C34B Order